	all : added --macro exclude('package') and --macro include('package')
	all : importing a typedef of an enum allow to access its constructors
	all : removed String.cca (replaced by StringTools.fastCodeAt + StringTools.isEOF)
	flash9 : fixed use of default values when null is passed for nullable basic types
	all : fixed issues with inlining and class/function type parameters

2010-08-14: 2.06
	neko : change serializer to be able to handle instances of basic classes from other modules
	js : add Document.createTextNode
	all : bugfix with inline when modifying var with same name as one of current local
	flash9 : classes implementing ArrayAccess<T> are now dynamic (including TypedDictionary)
	all : allow "using" on typedefs
	as3 : minor fixes in genas3 and --gen-hx-classes
	as3 : fix with readonly/writeonly properties accesses
	flash9 : list native getter/setters in Type API class/instance fields
	all : make haxe.rtti.Generic typing lazy (fix for self-recursion)
	all : allow haxe.rtti.Generic + inheritance
	all : added resource size limit to 12MB (ocaml max_string_size is 16MB + b64)
	flash : changes in swf handling to work with >16MB swfs
	flash9 : only init dynamic methods if not already defined (in subclass)
	std : added haxe.SHA1
	compiler : added TCast, allow cast optimization on flash9/cpp
	as3 : fixed Std.__init__ generating 'null'
	compiler : fixed -no-opt
	flash : allow several -swf-lib
		no longer support automatic creation of classes for f8 swfs in f9 mode
		classes defined in f9 swf are not redefinable in haXe code (use extern)
	flash9 : allow direct access and completion with classes defined in -swf-lib's
	flash9 : remove imported libraries debug infos when not compiled with -debug
	all : only display errors with --display if no completion matched
	all : some completion related errors fixed
	flash9 : added @:bind support
	all : fixed StringTools.hex with negative numbers
	flash9 : fixed Type.typeof(1<<28) was TFloat