@@ -43,6 +43,7 @@
 	all : removed String.cca (replaced by StringTools.fastCodeAt + StringTools.isEOF)
 	flash9 : fixed use of default values when null is passed for nullable basic types
 	all : fixed issues with inlining and class/function type parameters
+	all : big speedup for compiler internal completion
 
 2010-08-14: 2.06
 	neko : change serializer to be able to handle instances of basic classes from other modules
